@@ -4,6 +4,7 @@
 	  of TXT RRs with a string like "example.com. 2345 1234" with
 	  the trust anchors and their keytags.
 	- Fix that looped DNAMEs do not cause unbound to spend effort.
+	- trustanchor tags are sorted.  reusable routine to fetch taglist.
 
 13 March 2017: Wouter
 	- testbound understands Deckard MATCH rcode question answer commands.
